--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: react-app
+  name: client-service
 spec:
   selector:
     matchLabels:
-      app: react-app
+      app: client-service
   replicas: 2
   template:
     metadata:
       labels:
-        app: react-app
+        app: client-service
     spec:
       containers:
         - name: react-app
-          image: gcr.io/golden-sandbox-343808/github.com/arosh-segar/ctse-a2-react
+          image: gcr.io/golden-sandbox-343808/react-app:v1
           ports:
             - containerPort: 3000
