--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: react-app
+  name: client-service
 spec:
   selector:
-    app: react-app
+    app: client-service
   ports:
     - protocol: TCP
       port: 3000
