--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: gcr.io/golden-sandbox-343808/react-app:v1
+          image: gcr.io/golden-sandbox-343808/github.com/yadhursheeka/ctse-a2-react
           ports:
             - containerPort: 3000
